<resources>
    <string name="app_name">HomeworkApplication</string>

    <string name="all_confirm">확인</string>
    <string name="all_cancel">취소</string>
    <string name="all_user_id">아이디</string>
    <string name="all_user_password">암호</string>
    <string name="all_user_name">이름</string>
    <string name="all_user_phone_number">전화번호</string>
    <string name="all_user_address">주소</string>
    <string name="all_user_term">약관 동의 여부</string>

    <string name="login_title">로그인</string>
    <string name="login_id">ID</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">로그인</string>
    <string name="login_sign_up">가입</string>
    <string name="login_to_main">메인으로</string>
    <string name="login_error_id">등록되지 않은 아이디입니다.</string>
    <string name="login_error_id_positive">회원 가입하기</string>
    <string name="login_error_authenticate">비밀번호가 일치하지 않습니다.</string>
    <string name="login_toast_register_succeed">회원 가입 성공</string>
    <string name="login_toast_register_failed"> 회원 가입 실패</string>

    <string name="register_title">회원 가입</string>
    <string name="register_terms_title">이용 약관</string>
    <string name="register_terms_content"><big><b>이용 약관</b></big>\n
        <b>수집하는 개인 정보 항목</b>\n
        <p>서비스를 제공하기 위해 다음과 같은 개인 정보를 수집하고 있습니다.</p>\n
        - 계정의 아이디와 암호, 사용자의 이름과 전화번호, 주소 등의 개인 정보\n\n
        <p>또한 서비스 이용 과정이나 처리 과정에서 아래와 같은 정보들이 생성되어 수집될 수 있습니다.</p>\n
        - 서비스 이용 기록, 접속 로그, 접속 IP 정보 등\n\n
        \n\n…\n\n……
    </string>
    <string name="register_terms_decline">거부</string>
    <string name="register_terms_accept">동의</string>
    <string name="register_error_id">ID는 알파벳과 숫자, .과 -, _, \'으로 구성되고 숫자로 시작하지 않는 6자~64자 길이의 문자열입니다.</string>
    <string name="register_error_password">암호는 알파벳과 숫자를 비롯한 대부분의 특수문자로 구성되며 특수문자를 하나 이상 포함하는 8자~32자 길이의 문자열입니다.</string>

    <string name="main_add">추가</string>
    <string name="main_remove">제거</string>
    <string name="main_user_info">회원 정보</string>
    <string name="main_error_not_logged_in">로그인해야 회원 정보를 확인할 수 있습니다.</string>
    <string name="main_login">로그인</string>
    <string name="main_register">회원 가입</string>

    <string name="main_menu_layout">표시 설정</string>
    <string name="main_menu_layout_1">단일</string>
    <string name="main_menu_layout_2">2열</string>
    <string name="main_menu_layout_3">3열</string>
    <string name="main_menu_layout_4">4열</string>


    <string name="add_fragment_image">이미지</string>
    <string name="add_fragment_name">상품명</string>
    <string name="add_fragment_confirm">추가하기</string>
    <string name="add_fragment_image_error">이미지 가져오기 실패</string>

    <string name="remove_fragment_confirm">삭제하기</string>

    <string name="media_snack_1">과자 1</string>
    <string name="media_snack_2">과자 2</string>
    <string name="media_snack_3">과자 3</string>
    <string name="media_snack_4">과자 4</string>
    <string name="media_snack_5">과자 5</string>

</resources>