<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/main_menu_layout">
        <menu>
            <group android:id="@+id/menu_grp_linear">
                <item
                    android:id="@+id/menu_main_layout_1"
                    android:title="@string/main_menu_layout_1" />
            </group>
            <group android:id="@+id/menu_grp_grid">
                <item
                    android:id="@+id/menu_main_layout_2"
                    android:title="@string/main_menu_layout_2" />
                <item
                    android:id="@+id/menu_main_layout_3"
                    android:title="@string/main_menu_layout_3" />
                <item
                    android:id="@+id/menu_main_layout_4"
                    android:title="@string/main_menu_layout_4" />
            </group>
        </menu>
    </item>
    <group
        android:id="@+id/menu_grp_edit"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_main_add"
            android:title="@string/main_add" />
        <item
            android:id="@+id/menu_main_remove"
            android:title="@string/main_remove" />
    </group>
</menu>