<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingVertical="15dp"
    tools:context=".RegisterActivity"
    tools:showDividers="middle">

    <TextView
        android:id="@+id/text_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center|fill_vertical"
        android:text="@string/register_title"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_user_id"
                android:minHeight="48dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_user_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_user_name"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_user_phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_user_address"
                android:inputType="textPostalAddress"
                android:maxLines="3"
                android:minHeight="48dp"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_register_term_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/register_terms_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_register_term_content"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:text="@string/register_terms_content"
            android:textAlignment="viewStart" />

        <RadioGroup
            android:id="@+id/grp_register_term"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:checkedButton="@id/btn_register_decline"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_register_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/register_terms_decline" />

            <RadioButton
                android:id="@+id/btn_register_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/register_terms_accept" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>