<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="style/AnimatedDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:background="@drawable/all_border_medium"
    android:elevation="40dp"
    android:orientation="vertical"
    tools:context=".AddItemFragment">

    <ImageButton
        android:id="@+id/btn_all_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_add_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth="match_parent"
            app:srcCompat="@drawable/image_placeholder" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_add_item_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_insert_photo_24"
        android:drawablePadding="-24dp"
        android:minHeight="48dp"
        android:text="@string/add_fragment_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_fragment_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_all_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_fragment_confirm" />

</LinearLayout>